# sanbox

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: deploy-pages.yml  release-cli.yml  release-please.yml
docs/: .nojekyll  index.html  main.js  style.css
scripts/: build-web.sh
src/: font.rs  lib.rs  main.rs  renderer.rs  sim.rs  web.rs
